# cpuopt-kernel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
assets/: cpuopt-doctor-demo.txt  cpuopt-dry-run-demo.txt  cpuopt-monitor-demo.txt  cpuopt-recommend-demo.txt  cpuopt-status-demo.txt
cpuoptctl/: __init__.py  cpuopt_amd.py  cpuopt_apply.py  cpuopt_arm.py  cpuopt_compare.py  cpuopt_discovery.py  cpuopt_doctor.py  cpuopt_explain.py  cpuopt_intel.py  cpuopt_msr.py  cpuopt_profiles.py  cpuopt_recommend.py  cpuopt_telemetry.py  cpuopt_thermal.py  cpuopt_utils.py  cpuoptctl.py
docs/: AMD_NOTES.md  ARCHITECTURE.md  ARM_NOTES.md  DESIGN.md  INTEL_NOTES.md  MANUAL_MAP.md  ROADMAP.md  SAFETY.md  TESTING.md  THREAT_MODEL.md  index.html
examples/: profile-ai-inference.json  profile-balanced.json  profile-latency.json  profile-performance.json  profile-quiet.json
examples/workloads/: kernel-build.json  laptop-quiet.json  llama-inference.json  low-latency-trading.json  server-throughput.json
kernel/: Kconfig  Makefile  README.md  cpuopt_amd.c  cpuopt_arm.c  cpuopt_intel.c  cpuopt_policy.c  cpuopt_sysfs.c
scripts/: collect_baseline.sh  diff_profiles.sh  restore_defaults.sh  run_benchmarks.sh
tests/: test_depth.py  test_discovery.py  test_profiles.py  test_recommend.py  test_safety.py
tests/fixtures/amd_pstate/devices/system/cpu/cpufreq/policy0/: scaling_driver
tests/fixtures/amd_pstate/proc/: cpuinfo
tests/fixtures/amd_pstate/proc/sys/kernel/: osrelease
tests/fixtures/basic_cpufreq/devices/system/cpu/cpufreq/policy0/: scaling_available_governors
tests/fixtures/basic_cpufreq/proc/: cpuinfo
tests/fixtures/basic_cpufreq/proc/sys/kernel/: osrelease
tests/fixtures/intel_hwp/devices/system/cpu/cpu0/cpuidle/state1/: desc
tests/fixtures/intel_hwp/devices/system/cpu/cpufreq/policy0/: energy_performance_available_preferences  scaling_available_frequencies  scaling_available_governors
tests/fixtures/intel_hwp/proc/: cpuinfo
tests/fixtures/intel_hwp/proc/sys/kernel/: osrelease
