[project]
name = "cpuopt-kernel"
version = "0.2.0"
description = "Safety-first Linux CPU performance policy tool"
license = { text = "GPL-2.0-only" }
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
